--- a/assets/Css/style.css
+++ b/assets/Css/style.css
@@ -9,8 +9,9 @@ textarea{
   border: none;
   resize: none;
   color: #000000;
-  border-left: 1px solid black;
+  align-content: center;
   padding: 10px;
+  width: 90%;
 }
 
 .jumbotron {
@@ -69,3 +70,5 @@ textarea{
   font-size: 20px;
   transition: all .3s ease-in-out;
 }
+
+
